# Perfect10k

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ASYNC_DEPLOYMENT_GUIDE.md  CLAUDE.md  Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  PROBABILISTIC_CANDIDATES.md  README.md  SERVER.md  create_ssl_certs.sh  deploy.sh  deploy_to_pi.sh  dns_setup.sh  docker-compose.cache.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  route.gpx  route_planner.ipynb  ruff.toml  run.py  sync_cache_to_pi.sh  test-loading.html  warm_cache_api.py
backend/: .env.example  .pre-commit-config.yaml  COMPREHENSIVE_OPTIMIZATION_PLAN.md  Dockerfile  Dockerfile.simple  README.md  __init__.py  alembic.ini  async_job_manager.py  cache_management_cli.py  check_tile_geometry.py  clean_candidate_generator.py  clean_router.py  debug_semantic_grid.py  debug_simple.py  demo_spatial_tiles.py  docker-compose.yml  docker_cache_config.py  fast_candidate_generator.py  feature_database.py  interactive_router.py  interpretable_scorer.py  main.py  migrate_to_spatial_tiles.py  optimized_semantic_scoring.py  performance_profiler.py  probabilistic_candidate_generator.py  profile_performance.py  pyproject.toml  run.py  run_https.py  semantic_candidate_generator.py  semantic_overlays.py  semantic_scoring.py  server.py  simple_candidate_generator.py  simple_router_adapter.py  simple_test.py  smart_cache_manager.py  spatial_grid.py  (+6 more)
backend/alembic/: env.py
backend/api/: routes.py
backend/api/endpoints/: auth.py  places.py  preferences.py  routes.py
backend/core/: __init__.py  advanced_optimizer.py  config.py  database.py  enhanced_graph_cache.py  graph_cache.py  poi_enrichment.py  resolution_strategies.py  route_algorithms.py  semantic_grid.py  semantic_matcher.py  spatial_tile_storage.py  value_function.py
backend/models/: models.py  schemas.py
backend/scripts/: dev.sh  setup.sh  setup_db.py
backend/services/: auth.py  embedding_service.py  place_service.py  preference_service.py  route_planner.py
backend/utils/: load_osm_with_geometry.py
config/fail2ban/: perfect10k.conf
config/logrotate/: perfect10k
config/nginx/: perfect10k-cloudflare.conf  perfect10k.conf
config/systemd/: perfect10k-api.service  perfect10k-docker.service
docs/: architecture.md
frontend/: clear-browser-storage.js  https_server.py  index.html  server.py  test-loading.html
frontend/css/: components.css  map.css  styles.css
frontend/js/: api.js  app.js  auth.js  interactive_map.js  loading-animation.js  map.js  semantic_overlays.js  utils.js
scripts/: deploy.sh  dns_setup.sh  setup-server.sh  ssl-renew.sh
